# internal/routes/routes.go
@@ -9,6 +9,10 @@ func InitRoutes(r *gin.Engine) {
 	r.Use(middlewares.CORSMiddleware())
 	api := r.Group("api/v1")
 	{
+		sessions := api.Group("sessions")
+		InitSessionRoutes(sessions)
+	}
+	{
 		links := api.Group("links")
 		InitLinksRoutes(links)
 	}
